--- a/PresentacionSistemaPermisos/PresentacionSistemaPermisos.csproj
+++ b/PresentacionSistemaPermisos/PresentacionSistemaPermisos.csproj
@@ -58,6 +58,18 @@
     <Compile Include="FrmMenu.Designer.cs">
       <DependentUpon>FrmMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmPermisos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmPermisos.Designer.cs">
+      <DependentUpon>FrmPermisos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmPermisosAdd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmPermisosAdd.Designer.cs">
+      <DependentUpon>FrmPermisosAdd.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmUsuarios.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -84,6 +96,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMenu.resx">
       <DependentUpon>FrmMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmPermisos.resx">
+      <DependentUpon>FrmPermisos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmPermisosAdd.resx">
+      <DependentUpon>FrmPermisosAdd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmUsuarios.resx">
       <DependentUpon>FrmUsuarios.cs</DependentUpon>
@@ -141,6 +159,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\guardar0.5.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\alumno.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
