--- a/EntidadesSistemaPermisos/EntidadesSistemaPermisos.csproj
+++ b/EntidadesSistemaPermisos/EntidadesSistemaPermisos.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Herramientas.cs" />
     <Compile Include="Permisos.cs" />
     <Compile Include="Usuarios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
