--- a/ManejadoresSistemaPermisos/ManejadoresSistemaPermisos.csproj
+++ b/ManejadoresSistemaPermisos/ManejadoresSistemaPermisos.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IManejador.cs" />
+    <Compile Include="ManejadorHerramientas.cs" />
     <Compile Include="ManejadorPermisos.cs" />
     <Compile Include="ManejadorUsuarios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
