Desarrollo de inserción de productos

--- a/ManejadoresSistemaPermisos/ManejadoresSistemaPermisos.csproj
+++ b/ManejadoresSistemaPermisos/ManejadoresSistemaPermisos.csproj
@@ -49,6 +49,7 @@
     <Compile Include="IManejador.cs" />
     <Compile Include="ManejadorHerramientas.cs" />
     <Compile Include="ManejadorPermisos.cs" />
+    <Compile Include="ManejadorProductos.cs" />
     <Compile Include="ManejadorUsuarios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
