--- a/EntidadesSistemaPermisos/EntidadesSistemaPermisos.csproj
+++ b/EntidadesSistemaPermisos/EntidadesSistemaPermisos.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Herramientas.cs" />
     <Compile Include="Permisos.cs" />
+    <Compile Include="Productos.cs" />
     <Compile Include="Usuarios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
